--- a/GuardianVape/DataAccess.csproj
+++ b/GuardianVape/DataAccess.csproj
@@ -17,11 +17,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Implementations\" />
-    <Folder Include="Contracts\" />
     <Folder Include="DataContext\" />
   </ItemGroup>
 
