--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GV_DBConnection": "Server=localhost;Database=GuardianVape;User Id=sa;Password=123;"
+    "GV_DBConnection": "Data Source=.;Initial Catalog=GuardianVape;Persist Security Info=True;User ID=sa"
   }
 }
