frist migration done

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GV_DBConnection": "Data Source=.;Initial Catalog=GuardianVape;Persist Security Info=True;User ID=sa"
+    "GV_DBConnection": "Data Source=.;Initial Catalog=GuardianVape;User ID=sa;Password=123;TrustServerCertificate=True;"
   }
 }
