Deploying Repositiries And UnitOfWork

--- a/GuardianVape/DataAccess.csproj
+++ b/GuardianVape/DataAccess.csproj
@@ -22,11 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataContext\" />
+    <Folder Include="Contracts\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
