--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Implementations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj" />
+  </ItemGroup>
+
 </Project>
