Send Reset Password Email

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GV_DBConnection": "Data Source=.;Initial Catalog=GuardianVape;User ID=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "EmailSettings": {
+    "From": "GuardianVapeApi@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "465",
+    "Username": "GuardianVapeApi@gmail.com",
+    "Password": "peziisdioctgcooc"
   }
+
 }
