--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,14 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/WebAPI/Assets/Image/Collection/229098.png
+/WebAPI/Assets/Image/Collection/25231.png
+/WebAPI/Assets/Image/Collection/2991148.png
+/WebAPI/Assets/Image/Collection/600 Puff Disposable Vape copy.jpg
+/WebAPI/Assets/Image/Collection/default-no-image.png
+/WebAPI/Assets/Image/Collection/download.png
+/WebAPI/Assets/Image/Collection/E-Liquids Offer New Version 2.jpg
+/WebAPI/Assets/Image/Collection/E-Liquids Offer.jpg
+/WebAPI/Assets/Image/Collection/find and take it copy (2).jpg
+/WebAPI/Assets/Image/Collection/G.V-LOGO.png
+/WebAPI/Assets/Image/Collection/PODS copy.jpg
