--- a/WebAPI/WebAPI.BackEnd.csproj
+++ b/WebAPI/WebAPI.BackEnd.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\Image\Collection\" />
     <Folder Include="Controllers\FrontEndController\" />
   </ItemGroup>
 
