--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,4 @@ FodyWeavers.xsd
 /WebAPI/Assets/Image/Collection/find and take it copy (2).jpg
 /WebAPI/Assets/Image/Collection/G.V-LOGO.png
 /WebAPI/Assets/Image/Collection/PODS copy.jpg
+/WebAPI/wwwroot/Image
